# TESOURO-DIRETO-WX

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_INSTRUCTIONS.md  Procfile  README.md  pyproject.toml  railway.toml  requirements.txt
.github/workflows/: ci.yml  ingestao.yml
data/outputs/: ranking_atual.parquet
docs/: checklist-pos-auditoria.md  deploy-railway.md  desenho-rotina-automatica.md  dicionario-dados.md  metodologia-operacional.md  notas-pesquisa.md  plano-de-trabalho.md  politica-ingestao-csv.md  setup-task-scheduler.md
scripts/: agendar_atualizacao.py  cron_atualizacao.py  desinstalar_tarefa_windows.bat  instalar_tarefa_windows.bat  rodar_analytics.py  rodar_ingestao.py  setup_projeto.py  task_scheduler_setup.bat
src/analytics/: curva.py  metricas.py  ranking.py  score.py
src/dashboard/: app.py  callbacks.py  dados.py  layouts.py  plotly_theme.py
src/dashboard/assets/: style.css
src/ingestao/: brapi.py  download.py  monitor.py  registro.py  validacao.py
src/transformacao/: enriquecimento.py  padronizacao.py
src/utils/: config.py  constants.py  logging_setup.py
tests/: test_dashboard_dados.py  test_metricas.py  test_padronizacao.py  test_score.py  test_validacao.py
